--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "react-social-login-buttons": "^4.1.0",
+    "slick-carousel": "^1.8.1",
+    "tailwind-group-variant": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
